--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # This .gitignore file should be placed at the root of your Unity project directory
-#
-# Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
+# Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
 /[Ll]ibrary/
 /[Tt]emp/
@@ -59,3 +58,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 WebGL Builds/
+/[Aa]ssets/TextMesh Pro/
